working on json
fixed dates, made array for project

--- a/src/scripts/project.json
+++ b/src/scripts/project.json
@@ -1,8 +1,28 @@
 {
-   "PName": "Project",
-   "NumNotes": 3,
-   "NumAgenda": 3,
-   "NumTasks": 3,
-   "Start": "3/23/21",
-   "End": "3/25/21" 
+   "projects": [
+      {
+         "PName": "Project 1",
+         "NumNotes": 3,
+         "NumAgenda": 3,
+         "NumTasks": 3,
+         "Start": "2021-4-20",
+         "End": "2021-5-20"
+      },
+      {
+         "PName": "Project 2",
+         "NumNotes": 2,
+         "NumAgenda": 2,
+         "NumTasks": 2,
+         "Start": "2021-3-20",
+         "End": "2021-4-20"
+      },
+      {
+         "PName": "Project 3",
+         "NumNotes": 1,
+         "NumAgenda": 1,
+         "NumTasks": 1,
+         "Start": "2021-5-20",
+         "End": "2021-6-20"
+      }
+   ]
 }
